Change log for version 1.5.1

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,12 @@
+09.07.2020
+1. Исправлена справка по Ctrl+Shift+F3. Иногда выбивала исключения.
+2. Теперь все клавиши освобождаются как надо. Устроить дрель на клавиатуре больше не получится.
+3. RadioBox в nexus снова работают. В прошлой версии сломал по неосторожности.
+4. Теперь все интерфейсы в папке VUI открыты, становимся ближе к общему формату.
+5. В Kontakt для пункта Delete all loaded library добавлено сочетание клавиш Ctrl+D.
+6. В списке библиотек Kontakt для пункта Delete library добавлена клавиша D.
 06.07.2020
-1. Исправленны многие баги в окне поиска Nexus.
+1. Исправлены многие баги в окне поиска Nexus.
 2. Ползунки в Nexus работают в 10 раз быстрее.
 3. Исправлены ползунки в Nexus. Работали не на всех мониторах.
 4. Поддержка Serum. Переключение пресетов, регистрация с ключом из буфера обмена, все варианты bridge.
