Fix wording in changelog

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,9 +1,9 @@
 09.07.2020
 1. Исправлена справка по Ctrl+Shift+F3. Иногда выбивала исключения.
 2. Теперь все клавиши освобождаются как надо. Устроить дрель на клавиатуре больше не получится.
-3. RadioBox в nexus снова работают. В прошлой версии сломал по неосторожности.
+3. RadioBox в Nexus снова работают. В прошлой версии сломал по неосторожности.
 4. Теперь все интерфейсы в папке VUI открыты, становимся ближе к общему формату.
-5. В Kontakt для пункта Delete all loaded library добавлено сочетание клавиш Ctrl+D.
+5. В Kontakt для пункта Delete all loaded libraries добавлено сочетание клавиш Ctrl+D.
 6. В списке библиотек Kontakt для пункта Delete library добавлена клавиша D.
 06.07.2020
 1. Исправлены многие баги в окне поиска Nexus.
@@ -11,9 +11,9 @@
 3. Исправлены ползунки в Nexus. Работали не на всех мониторах.
 4. Поддержка Serum. Переключение пресетов, регистрация с ключом из буфера обмена, все варианты bridge.
 5. В папку Settings добавленно всё для Serum.
-6. Обнаружение окон по dll.
+6. Обнаружение окон по DLL.
 7. В настройках добавлен пункт для отключения вопроса при выходе.
-8. Переезд на github. http://github.com/viruzober/MagicKeys
+8. Переезд на GitHub. http://github.com/viruzober/MagicKeys
 9. Теперь MagicKeys компилируется для x86 и x64. Использование соответствующей версии для вашей ОС гарантирует правильное обнаружение окон.
 28.06.2020
 1. Исправлена работа пунктов Next library in folder и previous library in folder в Kontakt.
@@ -27,7 +27,7 @@
 8. Добавлено озвучивание типов объектов виртуального интерфейса. Можно отключить в настройках.
 9. В окне Progress при переходе на объект Loading теперь автоматически озвучивается процент загрузки.
 10. Добавлен модуль распознавания изменений на экране. Избавляет от больших задержек в Kontakt.
-11. Исходный код MagicKeys теперь полностью открыт, и распространяется по лицензии GPL V2.
+11. Исходный код MagicKeys теперь полностью открыт, и распространяется по лицензии GPL.
 12. В планах реализация декларативного формата для описания интерфейсов.
 27.05.2020
 1. Исправлено освобождение клавиш Up Down при выходе из окна Kontakt.
@@ -65,10 +65,10 @@
 3. Добавлена поддержка Kontakt Bridge.
 4. Добавлена поддержка Kontakt Portable.
 5. В папку Settings добавлены необходимые утилиты и конфигурационные файлы для корректной работы Kontakt.
-6. В папку Settings добавлены сценарии командной строки для включение и отключения прозрачности.
+6. В папку Settings добавлены сценарии командной строки для включения и отключения прозрачности.
 7. Добавлена поддержка синтезатора PlugSound, Доступны банки и патчи.
 8. Сочетание клавиш Ctrl+Shift+F4 предотвращает зацикливание в некоторых ситуациях. Использовать только при полной уверенности в зависании.
-9. Для распознания экрана вместо Tesseract теперь используется Windows 10 OCR.
-10. Распознание в windows 7 не поддерживается, и поддерживаться не будет.
+9. Для распознавания экрана вместо Tesseract теперь используется Windows 10 OCR.
+10. Распознавание в windows 7 не поддерживается, и поддерживаться не будет.
 11.05.2020
 1. Первая стабильная версия.
