--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+16.07.2020
+1. При закрытии Kontakt из списка библиотек клавиши освобождаются правильно.
+2. При переходе в окно Serum нет постоянного сообщения о необходимых действиях.
+3. Доступна регистрация Omnisphere.
+4. Этот релиз только для исправления мелких багов.
 09.07.2020
 1. Исправлена справка по Ctrl+Shift+F3. Иногда выбивала исключения.
 2. Теперь все клавиши освобождаются как надо. Устроить дрель на клавиатуре больше не получится.
