Fix Serum register

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,6 @@
 16.07.2020
+1. Регистрация в Serum теперь работает как надо.
+16.07.2020
 1. При закрытии Kontakt из списка библиотек клавиши освобождаются правильно.
 2. При переходе в окно Serum нет постоянного сообщения о необходимых действиях.
 3. Доступна регистрация Omnisphere.
