--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+18.07.2020
+1. Тестовая поддержкка Omnisphere. Переключение пресетов и банков, поиск, выбор канала.
+2. Исправление для Serum. В некоторых случаях не пропадал пункт для регистрации.
 16.07.2020
 1. Регистрация в Serum теперь работает как надо.
 16.07.2020
