Added help for omnisphere, edded change log.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,7 @@
 18.07.2020
-1. Тестовая поддержкка Omnisphere. Переключение пресетов и банков, поиск, выбор канала.
+1. Тестовая поддержкка Omnisphere. Переключение пресетов, банков и прокрутка страниц, поиск, выбор канала.
+При переключении MagicKeys не зависает, а ждёт пока Omnisphere действительно загрузит банк или патч, и только тогда произносится соответствующее название.
+Наберитесь терпения, в данном случае всё зависит от мощности вашего ПК.
 2. Исправление для Serum. В некоторых случаях не пропадал пункт для регистрации.
 16.07.2020
 1. Регистрация в Serum теперь работает как надо.
