--- a/Locale/ru/LC_MESSAGES/MagicKeys.po
+++ b/Locale/ru/LC_MESSAGES/MagicKeys.po
@@ -6,7 +6,7 @@ msgstr ""
 "PO-Revision-Date: 2021-08-23 13:44+0200\n"
 "Last-Translator: zvonimir stanecic <zvonimirek222@yandex.com>\n"
 "Language-Team: \n"
-"Language: ru_RU\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
