--- a/Locale/ru-RU/LC_MESSAGES/MagicKeys.po
+++ b/Locale/ru-RU/LC_MESSAGES/MagicKeys.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MagicKeys\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-23 01:51+0300\n"
+"POT-Creation-Date: 2021-08-23 12:35+0300\n"
 "PO-Revision-Date: 2020-08-13 20:12+0300\n"
 "Last-Translator: A11CF0 <a11cf0@yandex.ru>\n"
 "Language-Team: \n"
@@ -36,11 +36,11 @@ msgid ""
 msgstr ""
 
 #: ConfigInstaller\Forms\ConfigInstallerForm.cs:36
-msgid "Плагины"
+msgid "Plugins"
 msgstr ""
 
 #: ConfigInstaller\Forms\ConfigInstallerForm.cs:42
-msgid "Результат"
+msgid "Result"
 msgstr ""
 
 #: ConfigInstaller\Forms\ConfigInstallerForm.cs:69
