--- a/Locale/ru/LC_MESSAGES/MagicKeys.po
+++ b/Locale/ru/LC_MESSAGES/MagicKeys.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: MagicKeys\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-08-23 20:43+0300\n"
-"PO-Revision-Date: 2021-08-23 13:44+0200\n"
+"PO-Revision-Date: 2021-08-24 17:10+0200\n"
 "Last-Translator: zvonimir stanecic <zvonimirek222@yandex.com>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -59,7 +59,7 @@ msgstr "Установить"
 
 #: DeveloperTool\Core\ControlSearch.cs:17
 msgid "Control search"
-msgstr "Поиск элементов управлений"
+msgstr "Поиск элемента управления"
 
 #: DeveloperTool\Core\ControlSearch.cs:18
 msgid "Enter substring to search for a module."
