Updated russian locale, in beta. The strings are raw.

--- a/Locale/ru/LC_MESSAGES/MagicKeys.po
+++ b/Locale/ru/LC_MESSAGES/MagicKeys.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: MagicKeys\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-09-03 14:21+0300\n"
-"PO-Revision-Date: 2021-08-24 17:10+0200\n"
+"PO-Revision-Date: 2021-09-03 18:14+0200\n"
 "Last-Translator: zvonimir stanecic <zvonimirek222@yandex.com>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -63,6 +63,8 @@ msgid ""
 "This window appears to be out off screen. Do you want to move it to the "
 "visible area?"
 msgstr ""
+"Это окно отображается за пределами экрана. Вы хотите переместить его в "
+"видимую область?"
 
 #: DeveloperTool\Core\Img\ImgSave.cs:13
 msgid "Image name"
@@ -127,25 +129,23 @@ msgstr "Введите высоту OCR:"
 
 #: DeveloperTool\Core\Project\CreateProject.cs:26
 msgid "The project for this module already exists"
-msgstr ""
+msgstr "Проект для этого модуля уже существует"
 
 #: DeveloperTool\Core\Project\DeleteCurrentProject.cs:16
-#, fuzzy
 msgid "Do you really want to delete current project?"
-msgstr "Вы действительно хотите завершить работу MagicKeys?"
+msgstr "Вы действительно хотите удалить текущий проект?"
 
 #: DeveloperTool\Core\Project\DeleteCurrentProject.cs:16
 msgid "Delete current project"
-msgstr ""
+msgstr "Удаление текущего проекта"
 
 #: DeveloperTool\Core\Project\EditProject.cs:14
-#, fuzzy
 msgid "Project is not opened"
-msgstr "Раздел не найден"
+msgstr "Проект не открыт"
 
 #: DeveloperTool\Core\Project\OpenProject.cs:24
 msgid "project is opened"
-msgstr ""
+msgstr "проект открыт"
 
 #: DeveloperTool\Core\SpeakInfo\SpeakWindowRect.cs:12
 msgid "Width"
@@ -157,11 +157,11 @@ msgstr "Высота"
 
 #: DeveloperTool\Core\SpeakInfo\SpeakWindowRect.cs:15
 msgid "Window is not fully visible."
-msgstr ""
+msgstr "Окно видно не полностью."
 
 #: DeveloperTool\Forms\ControlSearchForm.cs:13
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: DeveloperTool\Forms\ControlSearchForm.cs:14
 #: DeveloperTool\Forms\CreateProjectForm.cs:18
@@ -176,12 +176,12 @@ msgstr "Поиск элемента управления"
 
 #: DeveloperTool\Forms\ControlSearchForm.cs:30
 msgid "Enter or select module name"
-msgstr ""
+msgstr "Введите или выберите имя модуля"
 
 #: DeveloperTool\Forms\CreateProjectForm.cs:17
 #: DeveloperTool\Forms\CreateProjectForm.cs:22
 msgid "Create project"
-msgstr ""
+msgstr "Создать проект"
 
 #: DeveloperTool\Forms\CreateProjectFormActions.cs:26
 #: DeveloperTool\Forms\CreateProjectFormActions.cs:31
@@ -198,12 +198,12 @@ msgstr "Ошибка"
 #: DeveloperTool\Forms\CreateProjectFormActions.cs:26
 #: DeveloperTool\Forms\EditProjectActions.cs:28
 msgid "Some fields are empty"
-msgstr ""
+msgstr "Некоторые поля пусты"
 
 #: DeveloperTool\Forms\CreateProjectFormActions.cs:31
 #: DeveloperTool\Forms\EditProjectActions.cs:35
 msgid "A project with the same name already exists."
-msgstr ""
+msgstr "Проект с таким именем уже существует."
 
 #: DeveloperTool\Forms\EditProject.cs:14 MagicKeys\Settings\SettingsForm.cs:90
 msgid "Save"
@@ -211,7 +211,7 @@ msgstr "Сохранить"
 
 #: DeveloperTool\Forms\EditProject.cs:19
 msgid "EditProject"
-msgstr ""
+msgstr "РедактироватьПроект"
 
 #: DeveloperTool\Forms\MenuForm.cs:24
 msgid "Developer tool"
